--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "^8.32.0",
     "eslint-config-next": "13.1.2",
-    "framer-motion": "^4",
+    "firebase": "^9.15.0",
+    "framer-motion": "^8.4.6",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
