--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-transition-group": "^4.4.5",
+    "recoil": "^0.7.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
